--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     	<meta charset="utf-8">
     	<title>Georges Ambroise Brunet</title>
     	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    	<link rel="shortcut icon" type="image/png" href="Assets/images/gbsowsicon.png"/>
+    	<link rel="shortcut icon" type="image/png" href="assets/images/gabwsicon.png"/>
     </head>
     <body>
         <p>Hello and welcome to my website.</p>
