--- a/index.html
+++ b/index.html
@@ -11,6 +11,44 @@
         <h1>
 		There's more to come!
 		</h1>
+        <h2>Tabs</h2>
+
+        <div class="tab">
+          <button class="tablinks" onclick="openCity(event, 'London')">London</button>
+          <button class="tablinks" onclick="openCity(event, 'Paris')">Paris</button>
+          <button class="tablinks" onclick="openCity(event, 'Tokyo')">Tokyo</button>
+        </div>
+
+        <div id="Home" class="tabcontent">
+          <h3>Home</h3>
+          <p>This is the Home Page of my website. I will post updates here woohoo! </p>
+        </div>
+
+        <div id="About Me" class="tabcontent">
+          <h3>About Me</h3>
+          <p>My name is Georges Ambroise Brunet.</p> 
+        </div>
+
+        <div id="Projects" class="tabcontent">
+          <h3>Projects</h3>
+          <p>This is where I will post past, present, and future projects I am working on.</p>
+        </div>
+
+        <script>
+        function openTab(evt, tabName) {
+          var i, tabcontent, tablinks;
+          tabcontent = document.getElementsByClassName("tabcontent");
+          for (i = 0; i < tabcontent.length; i++) {
+            tabcontent[i].style.display = "none";
+          }
+          tablinks = document.getElementsByClassName("tablinks");
+          for (i = 0; i < tablinks.length; i++) {
+            tablinks[i].className = tablinks[i].className.replace(" active", "");
+          }
+          document.getElementById(cityName).style.display = "block";
+          evt.currentTarget.className += " active";
+        }
+        </script>
     </body>
     
 </html>
