--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
         <h1>
 		There's more to come!
 		</h1>
-        <h2>Tabs</h2>
 
         <div class="tab">
-          <button class="tablinks" onclick="openCity(event, 'London')">London</button>
-          <button class="tablinks" onclick="openCity(event, 'Paris')">Paris</button>
-          <button class="tablinks" onclick="openCity(event, 'Tokyo')">Tokyo</button>
+          <button class="tablinks" onclick="openTab(event, 'Home')">Home</button>
+          <button class="tablinks" onclick="openTab(event, 'About Me')">About Me</button>
+          <button class="tablinks" onclick="openTab(event, 'Projects')">Projects</button>
         </div>
 
         <div id="Home" class="tabcontent">
