--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     	<link rel="shortcut icon" type="image/png" href="assets/images/gabwsicon.png"/>
     </head>
     <body>
-        <p>Hello and welcome to my website.</p>
         <h1>
-		There's more to come!
+		Hello and welcome to my website!
 		</h1>
 
         <div class="tab">
