--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <div class="tab">
           <button class="tablinks" onclick="openTab(event, 'Home')">Home</button>
           <button class="tablinks" onclick="openTab(event, 'About Me')">About Me</button>
+          <button class="tablinks" onclick="openTab(event, 'Work')">Work</button>
           <button class="tablinks" onclick="openTab(event, 'Projects')">Projects</button>
         </div>
 
@@ -25,6 +26,10 @@
           <p>My name is Georges Ambroise Brunet.</p> 
         </div>
 
+        <div id="Work" class="tabcontent">
+          <p>This is where I will post my work history.</p>
+        </div>
+        
         <div id="Projects" class="tabcontent">
           <p>This is where I will post past, present, and future projects I am working on.</p>
         </div>
