--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
     </head>
     <body>
         <h1>
-		Hello and welcome to my website!
-		</h1>
 
+		Georges Ambroise Brunet
+
+		</h1>
+        <p> Data Analyst/Scientist, artist, video game enthusiast </p>
+        
         <div class="tab">
           <button class="tablinks" onclick="openTab(event, 'Home')" id="defaultOpen">Home</button>
           <button class="tablinks" onclick="openTab(event, 'About Me')">About Me</button>
