--- a/index.html
+++ b/index.html
@@ -8,12 +8,10 @@
     </head>
     <body>
         <h1>
-
 		Georges Ambroise Brunet
-
 		</h1>
-        <p> Data Analyst/Scientist, artist, video game enthusiast </p>
-        
+        <p> Data Analyst/Scientist, Artist, Video Game Enthusiast </p>
+
         <div class="tab">
           <button class="tablinks" onclick="openTab(event, 'Home')" id="defaultOpen">Home</button>
           <button class="tablinks" onclick="openTab(event, 'About Me')">About Me</button>
