--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
         <h1>
 		Georges Ambroise Brunet
 		</h1>
-        <p> Data Analyst/Scientist, Artist, Video Game Enthusiast </p>
+        
+        <h2> 
+        Data Analyst/Scientist, Artist, Video Game Enthusiast
+         </h2>
 
         <div class="tab">
           <button class="tablinks" onclick="openTab(event, 'Home')" id="defaultOpen">Home</button>
