--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         Data Analyst/Scientist, Artist, Video Game Enthusiast
          </h2>
 
-        <div class="tab">
+        <div class="pill-nav">
           <button class="tablinks" onclick="openTab(event, 'Home')" id="defaultOpen">Home</button>
           <button class="tablinks" onclick="openTab(event, 'About Me')">About Me</button>
           <button class="tablinks" onclick="openTab(event, 'Work')">Work</button>
