--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <h2> 
         Data Analyst/Scientist, Artist, Video Game Enthusiast
          </h2>
-
-        <div class="pill-nav">
+         
+       <div class="tab">
           <button class="tablinks" onclick="openTab(event, 'Home')" id="defaultOpen">Home</button>
           <button class="tablinks" onclick="openTab(event, 'About Me')">About Me</button>
           <button class="tablinks" onclick="openTab(event, 'Work')">Work</button>
