--- a/index.html
+++ b/index.html
@@ -2,32 +2,32 @@
 <html>
     <head>
     	<meta charset="utf-8">
-    	<title>Georges Ambroise Brunet</title>
+    	<title>Georges Brunet</title>
     	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
     	<link rel="shortcut icon" type="image/png" href="assets/images/gabwsicon.png"/>
     </head>
     <body>
         <h1>
-		Georges Ambroise Brunet
+		Georges Brunet
 		</h1>
         
         <h2> 
         Data Analyst/Scientist, Artist, Video Game Enthusiast
          </h2>
-         
+
        <div class="tab">
-          <button class="tablinks" onclick="openTab(event, 'Home')" id="defaultOpen">Home</button>
-          <button class="tablinks" onclick="openTab(event, 'About Me')">About Me</button>
+          <button class="tablinks" onclick="openTab(event, 'About Me')" id="defaultOpen">About Me</button>
+          <button class="tablinks" onclick="openTab(event, 'Education')">Education</button>
           <button class="tablinks" onclick="openTab(event, 'Work')">Work</button>
           <button class="tablinks" onclick="openTab(event, 'Projects')">Projects</button>
         </div>
 
-        <div id="Home" class="tabcontent">
-          <p>This is the Home Page of my website. I will post updates here woohoo! </p>
-        </div>
-
         <div id="About Me" class="tabcontent">
           <p>My name is Georges Ambroise Brunet.</p> 
+        </div>
+
+        <div id="Education" class="tabcontent">
+          <p>This is where I will post about my education.</p> 
         </div>
 
         <div id="Work" class="tabcontent">
