--- a/index.html
+++ b/index.html
@@ -28,17 +28,14 @@ My name is Georges Brunet and I’m an aspiring Data Scientist based in Niwot, C
 
 <br>
 
-<p>
-I am a French native but I have lived and studied in different parts of the world. I moved away from France in 2003 and since then I have lived or studied in Carmel (Indiana), Millburn (New Jersey), Sao Paulo (Brazil), Cambridge (United Kingdom), Marbella (Spain), and Boulder (Colorado). I am currently living in Niwot, Colorado. I am an optimist and love the company of my friends and family. In my free time I like to make art, whether it be sculptures or paintings, watch sports, or my personal favorite: play video games. </p>
+I am a French native but I have lived and studied in different parts of the world. I moved away from France in 2003 and since then I have lived or studied in Carmel (Indiana), Millburn (New Jersey), Sao Paulo (Brazil), Cambridge (United Kingdom), Marbella (Spain), and Boulder (Colorado). I am currently living in Niwot, Colorado. I am an optimist and love the company of my friends and family. In my free time I like to make art, whether it be sculptures or paintings, watch sports, or my personal favorite: play video games.
 
 <br>
 
-<p> 
-I graduated from the University of Colorado, Boulder’s School of Arts & Sciences with a B.A. in Mathematics with a concentration in Applicability and Statistics in August 2019. Throughout my years at the university I worked as a Data Analytics Intern at Aspen Growth Ventures, a French Tutor at the French and Italian Department of the University of Colorado, Boulder, and as a Data Science Intern at Standard Alcohol, Inc. </p>
+I graduated from the University of Colorado, Boulder’s School of Arts & Sciences with a B.A. in Mathematics with a concentration in Applicability and Statistics in August 2019. Throughout my years at the university I worked as a Data Analytics Intern at Aspen Growth Ventures, a French Tutor at the French and Italian Department of the University of Colorado, Boulder, and as a Data Science Intern at Standard Alcohol, Inc.
 
 <br>
 
-<p>
 Feel free to explore my website to learn more about the work that I have done and what my current projects are!
 </p> 
         </div>
