--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
         </div>
 
         <div id="About Me" class="tabcontent">
+          <h3>
+            Hello there!
+          </h3>
 <p>
 My name is Georges Brunet and I’m an aspiring Data Scientist based in Niwot, Colorado. I love being able to tell a story with the help of numbers and so Data Science is the perfect intersection of creativity and mathematics. While I do enjoy working alone, I feel that the best insights are gathered through collaboration and that is why I love to work with people on Data Science projects. 
 <br>
