--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         </div>
 
         <div id="About Me" class="tabcontent">
+          <img src="assets/images/ProPic1.png" width = 10% />
           <h3>
             Hello there!
           </h3>
@@ -30,7 +31,7 @@
 My name is Georges Brunet and I’m an aspiring Data Scientist based in Niwot, Colorado. I love being able to tell a story with the help of numbers and so Data Science is the perfect intersection of creativity and mathematics. While I do enjoy working alone, I feel that the best insights are gathered through collaboration and that is why I love to work with people on Data Science projects. 
 <br>
 <br>
-I am a French native but I have lived and studied in different parts of the world. I moved away from France in 2003 and since then I have lived or studied in Carmel (Indiana), Millburn (New Jersey), Sao Paulo (Brazil), Cambridge (United Kingdom), Marbella (Spain), and Boulder (Colorado). I am currently living in Niwot, Colorado. I am an optimist and love the company of my friends and family. In my free time I like to make art, whether it be sculptures or paintings, watch sports, or my personal favorite: play video games.
+I am a French native but I have lived and studied in different parts of the world. I moved away from France in 2003 and since then I have lived or studied in Carmel (Indiana), Millburn (New Jersey), Sao Paulo (Brazil), Cambridge (United Kingdom), Marbella (Spain), and Boulder (Colorado). I am currently living in Niwot, Colorado. I enjoy comedy and love the company of my friends and family. In my free time I like to make art, whether it be sculptures or paintings, watch sports, or my personal favorite: play video games.
 <br>
 <br>
 I graduated from the University of Colorado, Boulder’s School of Arts & Sciences with a B.A. in Mathematics with a concentration in Applicability and Statistics in August 2019. Throughout my years at the university I worked as a Data Analytics Intern at Aspen Growth Ventures, a French Tutor at the French and Italian Department of the University of Colorado, Boulder, and as a Data Science Intern at Standard Alcohol, Inc.
