--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
 
         <div id="About Me" class="tabcontent">
-          <img src="assets/images/ProPic1.png" width = 10% />
+          <img src="assets/images/ProPic1.png" text-align: center; width = 10%; />
           <h3>
             Hello there!
           </h3>
