--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
 
         <div id="About Me" class="tabcontent">
-          <img src="assets/images/ProPic2.png" style= "text-align: right; max-width: 15%; height: auto" />
+          <img src="assets/images/ProPic2.png" style= "float: right; max-width: 15%; height: auto" />
           <h3>
             Hello there!
           </h3>
