--- a/index.html
+++ b/index.html
@@ -46,6 +46,19 @@ Feel free to explore my website to learn more about the work that I have done an
 
         <div id="Education" class="tabcontent">
           <p>This is where I will post about my education.</p> 
+            <div class="box">
+              <div class="imgBx">
+                <img src = "assets/images/CUBoulderlogo.png">
+              </div>
+              <div class = "content">
+                <h3> University of Colorado, Boulder - College of Arts & Sciences </h3>
+                <p> Bachelor of Arts in Mathematics, Concentration in Applicability and Statistics
+                <br> French Minor 
+                <br>
+                Completed August 2019
+                </p>
+              </div>
+            </div>
         </div>
 
         <div id="Work" class="tabcontent">
