--- a/index.html
+++ b/index.html
@@ -58,6 +58,30 @@ Feel free to explore my website to learn more about the work that I have done an
                 </p>
               </div>
             </div>
+            <div class="box">
+              <div class="imgBx">
+                <img src = "assets/images/IBMlogo.png">
+              </div>
+              <div class = "content">
+                <h3> 
+                Data Science Professional Certificate 
+                </h3>
+                <p> 
+                  Provides job-ready skills and techniques including data visualization, data analysis, machine learning, open source tools and libraries, methodologies, Python, databases, and SQL
+                </p>
+              </div>
+            </div>
+            <div class="box">
+              <div class="imgBx">
+                <img src = "assets/images/FVhslogo.png">
+              </div>
+              <div class = "content">
+                <h3> Fairview High School </h3>
+                <p> 
+                  Graduated in May 2015
+                </p>
+              </div>
+            </div>
         </div>
 
         <div id="Work" class="tabcontent">
