--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ Feel free to explore my website to learn more about the work that I have done an
                 Completed August 2019
                 </p>
               </div>
-
+            </div>  
             <div class="box">
               <div class="imgBx">
                 <img src = "assets/images/IBMlogo.png">
