--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@ Feel free to explore my website to learn more about the work that I have done an
         </div>
 
         <div id="Education" class="tabcontent">
+          <div class="flex-container">
             <div class="box">
               <div class="imgBx">
                 <img src = "assets/images/CUBoulderlogo.png">
@@ -84,6 +85,7 @@ Feel free to explore my website to learn more about the work that I have done an
               </div>
             </div>
         </div>
+      </div>
 
         <div id="Work" class="tabcontent">
           <p>This is where I will post my work history.</p>
