--- a/index.html
+++ b/index.html
@@ -46,6 +46,25 @@ Feel free to explore my website to learn more about the work that I have done an
 
         <div id="Education" class="tabcontent">
           <div class="flex-container">
+            <h2>
+              Certificates
+            </h2>
+           <div class="box">
+              <div class="imgBx">
+                <img src = "assets/images/IBMlogo.png">
+              </div>
+              <div class = "content">
+                <h3> 
+                Data Science Professional Certificate 
+                </h3>
+                <p> 
+                  Provides job-ready skills and techniques including data visualization, data analysis, machine learning, open source tools and libraries, methodologies, Python, databases, and SQL
+                </p>
+              </div>
+            </div>
+            <h2>
+              College Education
+            </h2>
             <div class="box">
               <div class="imgBx">
                 <img src = "assets/images/CUBoulderlogo.png">
@@ -59,20 +78,10 @@ Feel free to explore my website to learn more about the work that I have done an
                 </p>
               </div>
             </div>  
-            <div class="box">
-              <div class="imgBx">
-                <img src = "assets/images/IBMlogo.png">
-              </div>
-              <div class = "content">
-                <h3> 
-                Data Science Professional Certificate 
-                </h3>
-                <p> 
-                  Provides job-ready skills and techniques including data visualization, data analysis, machine learning, open source tools and libraries, methodologies, Python, databases, and SQL
-                </p>
-              </div>
-            </div>
-
+            
+            <h2>
+              High School Education
+            </h2>
             <div class="box">
               <div class="imgBx">
                 <img src = "assets/images/FVhslogo.png">
