--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@ Feel free to explore my website to learn more about the work that I have done an
                 </h3>
                 <p> 
                   Provides job-ready skills and techniques including data visualization, data analysis, machine learning, open source tools and libraries, methodologies, Python, databases, and SQL
+                  <br>
+                  Completed February 2020
                 </p>
               </div>
             </div>
