--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ Feel free to explore my website to learn more about the work that I have done an
               <div class = "content">
                 <h3> University of Colorado, Boulder - College of Arts & Sciences </h3>
                 <p> Bachelor of Arts in Mathematics, Concentration in Applicability and Statistics
-                <br> French Minor 
+                <br> & French Minor 
                 <br>
                 Completed August 2019
                 </p>
