--- a/index.html
+++ b/index.html
@@ -45,9 +45,8 @@ Feel free to explore my website to learn more about the work that I have done an
         </div>
 
         <div id="Education" class="tabcontent">
-          <h2>
-            Certificates
-          </h2>
+          <div class="flex-container">
+          <h3> Certificates </h3>
            <div class="box">
               <div class="imgBx">
                 <img src = "assets/images/IBMlogo.png">
@@ -63,9 +62,9 @@ Feel free to explore my website to learn more about the work that I have done an
                 </p>
               </div>
             </div>
-            <h2>
-              College Education
-            </h2>
+          </div>
+          <div class="flex-container">
+            <h3> College Education </h3>
             <div class="box">
               <div class="imgBx">
                 <img src = "assets/images/CUBoulderlogo.png">
@@ -79,10 +78,9 @@ Feel free to explore my website to learn more about the work that I have done an
                 </p>
               </div>
             </div>  
-            
-            <h2>
-              High School Education
-            </h2>
+          </div>
+          <div class="flex-container">
+            <h3> High School Education </h3>
             <div class="box">
               <div class="imgBx">
                 <img src = "assets/images/FVhslogo.png">
@@ -94,7 +92,10 @@ Feel free to explore my website to learn more about the work that I have done an
                 </p>
               </div>
             </div>
+          </div>
       </div>
+
+
 
         <div id="Work" class="tabcontent">
           <p>This is where I will post my work history.</p>
