--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <div class="flex-container">
             <div class="box">
                 <h3>
-                <img style= "text-align:center; max-width: 12%; height: auto" src="assets/images/ProPic2.png"  />
+                <img style= "float:center; max-width: 12%; height: auto" src="assets/images/ProPic2.png"  />
                 <br>
                 <br>
                   Hello there!
