--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <div id="About Me" class="tabcontent">
                 <h3>
-                <img style= "float:center; max-width: 12%; height: auto" src="assets/images/ProPic2.png" />
+                <img style= "text-align:center; max-width: 12%; height: auto" src="assets/images/ProPic2.png" />
                 <br>
                 <br>
                   Hello there!
