--- a/index.html
+++ b/index.html
@@ -70,8 +70,7 @@
               </div>
               <div class = "content">
                 <h3> University of Colorado, Boulder - College of Arts & Sciences </h3>
-                <p> Bachelor of Arts in Mathematics, Concentration in Applicability and Statistics
-                <br> & French Minor 
+                <p> Bachelor of Arts in Mathematics, Concentration in Applicability and Statistics & French Minor 
                 <br>
                 Completed August 2019
                 </p>
