--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
         </div>
 
         <div id="About Me" class="tabcontent">
-                <h3 style = "float:center;">
+                <h3 style = "left:50%; text-align: center;">
                 <img style= "text-align:center; max-width: 12%; height: auto" src="assets/images/ProPic2.png" />
                 <br>
                 <br>
                   Hello there!
                 </h3>
-                <p style= "width:50%; float:center;">
+                <p style= "width:50%; left:50%">
                 My name is Georges Brunet and I’m an aspiring Data Scientist based in Niwot, Colorado. I love being able to tell a story with the help of numbers and so Data Science is the perfect intersection of creativity and mathematics. While I do enjoy working alone, I feel that the best insights are gathered through collaboration and that is why I love to work with people on Data Science projects. 
                 <br>
                 <br>
