--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <br>
                   Hello there!
                 </h3>
-                <p style= "left:50%;">
+                <p style= "left:50%; max-width:50%; text-align:center;">
                 My name is Georges Brunet and I’m an aspiring Data Scientist based in Niwot, Colorado. I love being able to tell a story with the help of numbers and so Data Science is the perfect intersection of creativity and mathematics. While I do enjoy working alone, I feel that the best insights are gathered through collaboration and that is why I love to work with people on Data Science projects. 
                 <br>
                 <br>
