--- a/index.html
+++ b/index.html
@@ -90,6 +90,28 @@
                 </p>
               </div>
             </div>
+            <div class="box">
+              <div class="imgBx">
+                <img src = "assets/images/Gradedlogo.png">
+              </div>
+              <div class = "content">
+                <h3> Graded School </h3>
+                <p> 
+                  Spent Junior year and a portion of Senior year at this prestigious high school.
+                </p>
+              </div>
+            </div>
+            <div class="box">
+              <div class="imgBx">
+                <img src = "assets/images/MHSlogo.png">
+              </div>
+              <div class = "content">
+                <h3> Millburn High School </h3>
+                <p> 
+                  Spent Freshman and Sophomore year at this prestigious high school.
+                </p>
+              </div>
+            </div>
           </div>
       </div>
 
