--- a/index.html
+++ b/index.html
@@ -15,52 +15,52 @@
         Data Analyst/Scientist, Artist, Video Game Enthusiast
          </h2>
 
-       <div class="tab">
-          <button class="tablinks" onclick="openTab(event, 'About Me')" id="defaultOpen">About Me</button>
-          <button class="tablinks" onclick="openTab(event, 'Education')">Education</button>
-          <button class="tablinks" onclick="openTab(event, 'Work')">Work</button>
-          <button class="tablinks" onclick="openTab(event, 'Projects')">Projects</button>
-        </div>
+<div class="tab">
+  <button class="tablinks" onclick="openTab(event, 'About Me')" id="defaultOpen">About Me</button>
+  <button class="tablinks" onclick="openTab(event, 'Education')">Education</button>
+  <button class="tablinks" onclick="openTab(event, 'Work')">Work</button>
+  <button class="tablinks" onclick="openTab(event, 'Projects')">Projects</button>
+</div>
 
-        <div id="About Me" class="tabcontent">
-                <h3 style = "left:50%; text-align: center;">
-                <img style= "text-align:center; max-width: 12%; height: auto" src="assets/images/ProPic2.png" />
-                <br>
-                <br>
-                  Hello there!
-                </h3>
-                <p class="main">
-                My name is Georges Brunet and I’m an aspiring Data Scientist based in Niwot, Colorado. I love being able to tell a story with the help of numbers and so Data Science is the perfect intersection of creativity and mathematics. While I do enjoy working alone, I feel that the best insights are gathered through collaboration and that is why I love to work with people on Data Science projects. 
-                <br>
-                <br>
-                I am a French native but I have lived and studied in different parts of the world. I moved away from France in 2003 and since then I have lived or studied in Carmel (Indiana), Millburn (New Jersey), Sao Paulo (Brazil), Cambridge (United Kingdom), Marbella (Spain), and Boulder (Colorado). I am currently living in Niwot, Colorado. I enjoy comedy and love the company of my friends and family. In my free time I like to make art, whether it be sculptures or paintings, watch sports, or my personal favorite: play video games.
-                <br>
-                <br>
-                I graduated from the University of Colorado, Boulder’s School of Arts & Sciences with a B.A. in Mathematics with a concentration in Applicability and Statistics in August 2019. Throughout my years at the university I worked as a Data Analytics Intern at Aspen Growth Ventures, a French Tutor at the French and Italian Department of the University of Colorado, Boulder, and as a Data Science Intern at Standard Alcohol, Inc.
-                <br>
-                <br>
-                Feel free to explore my website to learn more about the work that I have done and what my current projects are!
-                </p> 
-        </div>
+<div id="About Me" class="tabcontent">
+  <h3 style = "left:50%; text-align: center;">
+    <img style= "text-align:center; max-width: 12%; height: auto" src="assets/images/ProPic2.png" />
+    <br>
+    <br>
+    Hello there!
+  </h3>
+  <p class="main">
+      My name is Georges Brunet and I’m an aspiring Data Scientist based in Niwot, Colorado. I love being able to tell a story with the help of numbers and so Data Science is the perfect intersection of creativity and mathematics. While I do enjoy working alone, I feel that the best insights are gathered through collaboration and that is why I love to work with people on Data Science projects. 
+    <br>
+    <br>
+      I am a French native but I have lived and studied in different parts of the world. I moved away from France in 2003 and since then I have lived or studied in Carmel (Indiana), Millburn (New Jersey), Sao Paulo (Brazil), Cambridge (United Kingdom), Marbella (Spain), and Boulder (Colorado). I am currently living in Niwot, Colorado. I enjoy comedy and love the company of my friends and family. In my free time I like to make art, whether it be sculptures or paintings, watch sports, or my personal favorite: play video games.
+    <br>
+    <br>
+      I graduated from the University of Colorado, Boulder’s School of Arts & Sciences with a B.A. in Mathematics with a concentration in Applicability and Statistics in August 2019. Throughout my years at the university I worked as a Data Analytics Intern at Aspen Growth Ventures, a French Tutor at the French and Italian Department of the University of Colorado, Boulder, and as a Data Science Intern at Standard Alcohol, Inc.
+    <br>
+    <br>
+      Feel free to explore my website to learn more about the work that I have done and what my current projects are!
+  </p> 
+</div>
 
-        <div id="Education" class="tabcontent">
-          <div class="flex-container">
-          <h3> Certificates </h3>
-           <div class="box">
-              <div class="imgBx">
-                <img src = "assets/images/IBMlogo.png">
-              </div>
-              <div class = "content">
-                <h3> 
-                Data Science Professional Certificate 
-                </h3>
-                <p> 
-                  Provides job-ready skills and techniques including data visualization, data analysis, machine learning, open source tools and libraries, methodologies, Python, databases, and SQL
-                  <br>
-                  Completed February 2020
-                </p>
-              </div>
-            </div>
+<div id="Education" class="tabcontent">
+    <div class="flex-container">
+      <h3> Certificates </h3>
+      <div class="box">
+        <div class="imgBx">
+          <img src = "assets/images/IBMlogo.png">
+        </div>
+        <div class = "content">
+          <h3> 
+            Data Science Professional Certificate 
+          </h3>
+          <p> 
+            Provides job-ready skills and techniques including data visualization, data analysis, machine learning, open source tools and libraries, methodologies, Python, databases, and SQL
+            <br>
+            Completed February 2020
+          </p>
+        </div>
+      </div>
           </div>
           <div class="flex-container">
             <h3> College Education </h3>
@@ -86,6 +86,8 @@
               <div class = "content">
                 <h3> Fairview High School </h3>
                 <p> 
+                  Located in Southern Boulder, Colorado, I spent the rest of my senior year at this exceptional school. 
+                  <br>
                   Graduated in May 2015
                 </p>
               </div>
@@ -97,7 +99,7 @@
               <div class = "content">
                 <h3> Graded School </h3>
                 <p> 
-                  Spent Junior year and a portion of Senior year at this prestigious high school.
+                  Located in Sao Paolo, Brazil, I spent the second semester of Sophomore year, Junior year and a portion of Senior year at this prestigious high school.
                 </p>
               </div>
             </div>
@@ -108,17 +110,18 @@
               <div class = "content">
                 <h3> Millburn High School </h3>
                 <p> 
-                  Spent Freshman and Sophomore year at this prestigious high school.
+                  Located in Millburn, New Jersey, I spent Freshman and the first semester of Sophomore year at this prestigious high school.
                 </p>
               </div>
             </div>
           </div>
       </div>
 
-
-
         <div id="Work" class="tabcontent">
-          <p>This is where I will post my work history.</p>
+
+          <p class="main">
+            This is where I will post my work history.
+          </p>
         </div>
 
         <div id="Projects" class="tabcontent">
