--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
           <p> 
             Provides job-ready skills and techniques including data visualization, data analysis, machine learning, open source tools and libraries, methodologies, Python, databases, and SQL
             <br>
+            <br>
             Completed February 2020
           </p>
         </div>
@@ -72,7 +73,8 @@
                 <h3> University of Colorado, Boulder - College of Arts & Sciences </h3>
                 <p> Bachelor of Arts in Mathematics, Concentration in Applicability and Statistics & French Minor 
                 <br>
-                Completed August 2019
+                <br>
+                Completed and Graduated August 2019
                 </p>
               </div>
             </div>  
@@ -87,6 +89,7 @@
                 <h3> Fairview High School </h3>
                 <p> 
                   Located in Southern Boulder, Colorado, I spent the rest of my senior year at this exceptional school. 
+                  <br>
                   <br>
                   Graduated in May 2015
                 </p>
