--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
               <div class="imgBx">
                 <img src = "assets/images/FVhslogo.png">
               </div>
-              <div class = "content">
+              <div class = "content" style = "margin-top:-10%;">
                 <h3> Fairview High School </h3>
                 <p> 
                   Located in Southern Boulder, Colorado, I spent the rest of my senior year at this exceptional school. 
