--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     	<link rel="shortcut icon" type="image/png" href="assets/images/gabwsicon1.png"/>
     </head>
     <body>
-        <h1>
-		Georges Brunet
-		</h1>
+      <h1>
+		    Georges Brunet
+		  </h1>
         
-        <h2> 
+      <h2> 
         Data Analyst/Scientist, Artist, Video Game Enthusiast
-         </h2>
+      </h2>
 
 <div class="tab">
   <button class="tablinks" onclick="openTab(event, 'About Me')" id="defaultOpen">About Me</button>
@@ -123,12 +123,14 @@
         <div id="Work" class="tabcontent">
 
           <p class="main">
-            This is where I will post my work history.
+            This is where I will post my work history and the work I am currently doing. This will be placed in a chronological order, so from my current stupid unemployment to the first internship I ever had. That's how it be sometimes.
           </p>
         </div>
 
         <div id="Projects" class="tabcontent">
-          <p>This is where I will post past, present, and future projects I am working on.</p>
+          <p class="main">
+          This is where I will post past, present, and future projects I am working on. This is my most fun tab where I have all the fun fun fun FUN FUN!
+        </p>
         </div>
 
         <script>
