--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
 </div>
 
 <div id="Education" class="tabcontent">
+    <p class="main"> 
+    Here I have a summary of my education which follows in the order of Certificates, College Education, and lastly, High School Education. 
+    </p>
     <div class="flex-container">
       <h3> Certificates </h3>
       <div class="box">
