--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             Provides job-ready skills and techniques including data visualization, data analysis, machine learning, open source tools and libraries, methodologies, Python, databases, and SQL
             <br>
             <br>
-            Completed February 2020
+            <i>Completed February 2020</i>
           </p>
         </div>
       </div>
@@ -77,7 +77,7 @@
                 <p> Bachelor of Arts in Mathematics, Concentration in Applicability and Statistics & French Minor 
                 <br>
                 <br>
-                Completed and Graduated August 2019
+                <i>Completed and Graduated August 2019</i>
                 </p>
               </div>
             </div>  
@@ -94,7 +94,7 @@
                   Located in Southern Boulder, Colorado, I spent the rest of my senior year at this exceptional school. 
                   <br>
                   <br>
-                  Graduated in May 2015
+                  <i>Graduated in May 2015</i>
                 </p>
               </div>
             </div>
