--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		  </h1>
         
       <h2> 
-        Data Analyst/Scientist, Artist, Video Game Enthusiast
+        Data Analyst & Scientist, Artist, Video Game Enthusiast
       </h2>
 
 <div class="tab">
@@ -127,6 +127,9 @@
 
           <p class="main">
             This is where I will post my work history and the work I am currently doing. This will be placed in a chronological order, so from my current stupid unemployment to the first internship I ever had. That's how it be sometimes.
+            <br>
+            <br>
+            Click on the Job Boxes to explore the work I've done!
           </p>
         </div>
 
