--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
           <img src = "assets/images/OctaneXtechlogo.png"/>
           Data Science Intern
           </button>
-          <div class="content">
+          <div class="collapsiblecontent">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
           </div>
           <br>
@@ -150,7 +150,7 @@
           <img src = "assets/images/FVhslogo.png" alt = "Ree"/>
           Open Section 2
           </button>
-          <div class="content">
+          <div class="collapsiblecontent">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
           </div>
           <br>
@@ -159,7 +159,7 @@
           <img src = "assets/images/FVhslogo.png" alt = "Ree"/>
           Open Section 3
           </button>
-          <div class="content">
+          <div class="collapsiblecontent">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
           </div>
         </div>
