--- a/index.html
+++ b/index.html
@@ -137,9 +137,11 @@
             <br>
             Click on the Job Boxes to explore the work I've done!
           </p>
-                    <button class="collapsible">
-          <img src = "assets/images/OctaneXtechlogo.png"/>
-          Data Science Intern
+          <button class="collapsible">
+            <div class="imgBx"
+            <img src = "assets/images/OctaneXtechlogo.png"/>
+            </div>
+            Data Science Intern
           </button>
           <div class="collapsiblecontent">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
@@ -147,8 +149,8 @@
           <br>
           <br>
           <button class="collapsible">
-          <img src = "assets/images/FVhslogo.png" alt = "Ree"/>
-          Open Section 2
+            <img src = "assets/images/CUBoulderlogo.png" alt = "Ree"/>
+            French Tutor
           </button>
           <div class="collapsiblecontent">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
@@ -156,7 +158,7 @@
           <br>
           <br>
           <button class="collapsible">
-          <img src = "assets/images/FVhslogo.png" alt = "Ree"/>
+          <img src = "assets/images/AGVlogo.png" alt = "Ree"/>
           Open Section 3
           </button>
           <div class="collapsiblecontent">
