--- a/index.html
+++ b/index.html
@@ -138,9 +138,7 @@
             Click on the Job Boxes to explore the work I've done!
           </p>
           <button class="collapsible">
-            <div class="imgBx"
-            <img src = "assets/images/OctaneXtechlogo.png"/>
-            </div>
+            <img src = "assets/images/OctaneXtechlogo.png" style="max-width:20%"/>
             Data Science Intern
           </button>
           <div class="collapsiblecontent">
