--- a/index.html
+++ b/index.html
@@ -129,6 +129,10 @@
 
 
 
+
+
+
+
         <div id="Work" class="tabcontent">
 
           <p class="main">
@@ -147,7 +151,7 @@
           <br>
           <br>
           <button class="collapsible">
-            <img src = "assets/images/CUBoulderlogo.png" alt = "Ree"/>
+            <img src = "assets/images/CUBoulderlogo.png" style="max-width:20%"/>
             French Tutor
           </button>
           <div class="collapsiblecontent">
@@ -156,13 +160,19 @@
           <br>
           <br>
           <button class="collapsible">
-          <img src = "assets/images/AGVlogo.png" alt = "Ree"/>
+          <img src = "assets/images/AGVlogo.png" style="max-width:20%"/>
           Open Section 3
           </button>
           <div class="collapsiblecontent">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
           </div>
         </div>
+
+
+
+
+
+
 
 
 
