--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
           <br>
           <br>
           <button class="collapsible">
-          <img src = "assets/images/AGVlogo.png" style="max-width:20%"/>
-          Open Section 3
+          <img src = "assets/images/AGVlogo1.png" style="max-width:20%"/>
+          Data Analyst Intern
           </button>
           <div class="collapsiblecontent">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
