--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             This is where I will post my work history and the work I am currently doing. This will be placed in a chronological order, so from my current stupid unemployment to the first internship I ever had. That's how it be sometimes.
             <br>
             <br>
-            Click on the Job Boxes to explore the work I've done!
+            Click on the companies' logos to see what position I held with them and explore the work I've done!
           </p>
           <button class="collapsible">
             <img src = "assets/images/OctaneXtechlogo.png" style="max-width:40%"/>
