--- a/index.html
+++ b/index.html
@@ -148,7 +148,13 @@
             <img src = "assets/images/OctaneXtechlogo.png" style="max-width:60%"/>
           </button>
           <div class="collapsiblecontent">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <h3> Data Science Intern </h3>
+              <p>
+                As a Data Science Intern, my role included software engineering and architecture, database creation and management, product analysis and development, as well as analytic reports generation.
+                <br>
+                <br>
+                From June 2018 to June 2019, I had the pleasure of working as a Data Science Intern at OctaneX Technologies, formerly known as Standard Alcohol at the time. I had numerous roles throughout my year there that each provided me with valuable experience and knowledge in a truly interesting industry.
+              </p>
           </div>
           <br>
           <br>
