--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <img src = "assets/images/OctaneXtechlogo.png" style="max-width:60%"/>
           </button>
           <div class="collapsiblecontent">
-            <h3> Data Science Intern </h3>
+            <h3> OctaneX Technologies <br> Data Science Intern </h3>
               <p>
                 As a Data Science Intern, my role included software engineering and architecture, database creation and management, product analysis and development, as well as analytic reports generation.
                 <br>
@@ -163,7 +163,12 @@
             <img src = "assets/images/CUBoulderlogo.png" style="max-width:60%"/>
           </button>
           <div class="collapsiblecontent">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <h3> Department of French and Italian <br> French Tutor </h3>
+            <p>As a French Tutor at the university, I developed and implemented comprehensive lesson plans for students of lower and higher division levels.
+              <br>
+              <br>
+              From September 2016 to March 2018, I worked as a tutor at the Department of French and Italian at the University of Colorado, Boulder. I provided services to students of all levels, ranging from beginner levels to Master’s levels. As a French native who learned a few other languages growing up, I have a good sense of what commonalities in certain languages pose problems to speakers of languages with different grammatical structures. This motivated me to design level assessments for my students to measure their capabilities in French by topics and pinpoint the areas of improvement that aligned with the areas they wanted to improve. I also provided revisions to students’ papers and assisted them in developing their own voice in French in the form of writing. 
+            </p>
           </div>
           <br>
           <br>
@@ -172,7 +177,9 @@
           <img src = "assets/images/AGVlogo1.png" style="max-width:40%"/>
           </button>
           <div class="collapsiblecontent">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <h3> Aspen Growth Ventures, LLC <br> Data Analystics Intern </h3>
+            <p>As a Data Analytics Intern, my role included database creation and management, product design and development, and data analytics.
+            </p>
           </div>
 
         </div>
