--- a/index.html
+++ b/index.html
@@ -44,9 +44,6 @@
 </div>
 
 <div id="Education" class="tabcontent">
-    <p class="main"> 
-    Here I have a summary of my education which follows in the order of Certificates, College Education, and lastly, High School Education. 
-    </p>
     <div class="flex-container">
       <h3> Certificates </h3>
       <div class="box">
@@ -240,7 +237,7 @@
         }
 
         window.onscroll = function() {myFunction()};
-        var tabcontent= document.getElementsByClassName("tabcontent");
+        var tabcontent= document.getElementsByClassName("tab");
 
         var sticky = tabcontent.offsetTop;
 
