--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <button class="tablinks" onclick="openTab(event, 'About Me')" id="defaultOpen">About Me</button>
   <button class="tablinks" onclick="openTab(event, 'Education')">Education</button>
   <button class="tablinks" onclick="openTab(event, 'Work')">Work</button>
+  <button class="tablinks" onclick="openTab(event, 'Skills')">Skills</button>
   <button class="tablinks" onclick="openTab(event, 'Projects')">Projects</button>
 </div>
 
@@ -191,6 +192,13 @@
 
 
 
+
+
+        <div id="Skills" class="tabcontent">
+          <p class="main">
+          Here is an organized list of my skills and in what capacity I am familiar with them, as well as the level of proficiency I have in these domains.
+        </p>
+        </div>
 
 
         <div id="Projects" class="tabcontent">
