--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 		  </h1>
         
       <h2> 
-        Data Analyst & Scientist, Artist, Video Game Enthusiast
+        Data Analyst & Scientist
+        <br> Occasional Programmer, Artist, Video Game Enthusiast
       </h2>
 
 <div class="tab">
