--- a/index.html
+++ b/index.html
@@ -126,17 +126,7 @@
       </div>
 
 
-
-
-
-
-
-
-
-
-
         <div id="Work" class="tabcontent">
-
           <p class="main">
             This is where I will post my work history and the work I am currently doing. This will be placed in a chronological order, so from my current stupid unemployment to the first internship I ever had. That's how it be sometimes.
             <br>
@@ -160,7 +150,6 @@
           </div>
           <br>
           <br>
-
           <button class="collapsible">
             <img src = "assets/images/CUBoulderlogo.png" style="max-width:60%"/>
           </button>
@@ -174,7 +163,6 @@
           </div>
           <br>
           <br>
-
           <button class="collapsible">
           <img src = "assets/images/AGVlogo1.png" style="max-width:40%"/>
           </button>
@@ -183,13 +171,7 @@
             <p>As a Data Analytics Intern, my role included database creation and management, product design and development, and data analytics.
             </p>
           </div>
-
         </div>
-
-
-
-
-
 
 
 
@@ -202,6 +184,63 @@
           <p class="main">
           Here is an organized list of my skills and in what capacity I am familiar with them, as well as the level of proficiency I have in these domains.
         </p>
+
+        <button class="collapsible"> 
+          <h3> Test 1 </h3>
+        </button>
+          <div class="collapsiblecontent">
+            <h4> LEVEL </h4>
+            <p>
+              Test
+              <br>
+              <br>
+              Test
+              <br>
+              Test
+            </p>
+          </div>
+          <button class="collapsible"> 
+          <h3> Test 2 </h3>
+        </button>
+          <div class="collapsiblecontent">
+            <h4> LEVEL </h4>
+            <p>
+              Test
+              <br>
+              <br>
+              Test
+              <br>
+              Test
+            </p>
+          </div>
+          <button class="collapsible"> 
+          <h3> Test 3 </h3>
+        </button>
+          <div class="collapsiblecontent">
+            <h4> LEVEL </h4>
+            <p>
+              Test
+              <br>
+              <br>
+              Test
+              <br>
+              Test
+            </p>
+          </div>
+          <button class="collapsible"> 
+          <h3> Test 4 </h3>
+        </button>
+          <div class="collapsiblecontent">
+            <h4> LEVEL </h4>
+            <p>
+              Test
+              <br>
+              <br>
+              Test
+              <br>
+              Test
+            </p>
+          </div>
         </div>
 
 
